# MiniGPT

./: .gitignore  pyproject.toml  train.py
.github/workflows/: lint.yml
data/: data.py
notebooks/: MiniLLM.ipynb
src/: attention.py  block.py  config.py  embeddings.py  feedforward.py  model.py
tests/: mha_test.py
